--- a/assets/styles/scss/helpers/_reset.scss
+++ b/assets/styles/scss/helpers/_reset.scss
@@ -1,5 +1,4 @@
 :root{
-    box-sizing: border-box;
     font-size: calc(1vw + .6em);
 
 }
@@ -18,6 +17,7 @@ ul,li,
 div,
 span{
     @include reset_spaces();
+    box-sizing: border-box;
    
 }
 
@@ -41,6 +41,20 @@ textarea,
 select{
     @include reset_outlines();
 }
+
+.container{
+    // width: calc(100% - 60px);
+    // margin: 0 auto;
+    // width: 100%;
+    // box-sizing: border-box;
+    padding: 0 30px;
+}
+
+.wrapper{
+    display: flex;
+}
+
+
 
 
 
