--- a/assets/styles/scss/helpers/_reset.scss
+++ b/assets/styles/scss/helpers/_reset.scss
@@ -1,7 +1,6 @@
-:root{
-    font-size: calc(1vw + .6em);
-
-}
+// :root{
+//     font-size: calc(1vw + .6em);
+// }
 @mixin reset_spaces {
     padding: 0;
     margin: 0; 
@@ -52,12 +51,6 @@ select{
     // box-sizing: border-box;
     padding: 0 30px;
 }
-
-.wrapper{
-    display: flex;
-}
-
-
 
 
 
