--- a/assets/styles/scss/main.scss
+++ b/assets/styles/scss/main.scss
@@ -9,4 +9,5 @@
 @import './helpers/vars';
 @import './helpers/reset';
 @import './content/header';
+@import './content/head';
 @import './content/form';
