--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -271,6 +271,10 @@ span {
 }
 
 body {
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
   background-color: #000;
   color: #fff;
   font-family: "Montserrat", Arial, Helvetica, sans-serif;
@@ -373,7 +377,7 @@ select {
   padding: 50px 0px;
 }
 .head__wrapper {
-  width: 214px;
+  width: calc(100% - 50px);
   margin: 0 auto;
 }
 .head__block-title {
@@ -388,12 +392,16 @@ select {
 }
 .head__link {
   display: block;
-  margin: 0 36px;
-  padding: 10px 25px;
-  font-size: 12px;
+  width: calc(100% - 16vw);
+  margin: 0 auto;
+  padding: 10px 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   border-radius: 20px;
   background-color: #fff;
+  font-size: 12px;
   color: #000;
+  text-align: center;
   -webkit-transition: 0.6s;
   transition: 0.6s;
 }
@@ -404,9 +412,9 @@ select {
   background-color: rgba(255, 255, 255, 0.845);
 }
 .head__image {
-  margin: 50px 20px 0 20px;
-  width: 171px;
-  height: 121px;
+  margin-top: 50px;
+  width: 100%;
+  height: auto;
 }
 
 /*# sourceMappingURL=main.css.map */
