--- a/assets/styles/scss/content/_head.scss
+++ b/assets/styles/scss/content/_head.scss
@@ -1,10 +1,12 @@
 .head{
     padding: 50px 0px;
     &__wrapper{
-        width: 214px;
+        width: $wid;
         margin: 0 auto;
     }
+    
     &__block-title{
+        // text-align: center;
         margin-bottom: 26px;
     }
     &__title{
@@ -16,12 +18,16 @@
     }
     &__link{
         display: block;
-        margin: 0 36px;
-        padding: 10px 25px;
-        font-size: 12px;
+        width: calc(100% - 16vw);
+        margin: 0 auto;
+        padding: 10px 0;
+        box-sizing: border-box;
         border-radius: 20px;
+
         background-color: $wt;
+        font-size: 12px;
         color: $bc;
+        text-align: center;
         transition: 0.6s;
        
         &:hover{
@@ -33,8 +39,8 @@
     }
 
     &__image{
-        margin: 50px 20px 0 20px;
-        width: 171px;
-        height: 121px;
+        margin-top: 50px;
+        width: 100%;
+        height: auto;
     }
 }
