--- a/assets/styles/scss/helpers/_reset.scss
+++ b/assets/styles/scss/helpers/_reset.scss
@@ -24,6 +24,7 @@ span{
 }
 
 body{
+    user-select: none;
     background-color: $bc;
     color: $wt;
     font-family: $mnsrt, Arial, Helvetica, sans-serif;
