--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -263,7 +263,8 @@ h1, h2, h3, h4, h5, h6,
 p,
 ul, li,
 div,
-span {
+span,
+fieldset {
   padding: 0;
   margin: 0;
   -webkit-box-sizing: border-box;
@@ -292,9 +293,27 @@ a {
 button,
 input,
 textarea,
-select {
+select,
+fieldset {
   border: 0;
   outline: none;
+}
+
+.button {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  background-color: #fff;
+  font-size: 12px;
+  color: #000;
+  text-align: center;
+  -webkit-transition: 0.6s;
+  transition: 0.6s;
+}
+.button:hover {
+  background-color: rgba(255, 255, 255, 0.942);
+}
+.button:active {
+  background-color: rgba(255, 255, 255, 0.845);
 }
 
 .container {
@@ -377,44 +396,86 @@ select {
   padding: 50px 0px;
 }
 .head__wrapper {
-  width: calc(100% - 50px);
   margin: 0 auto;
+  width: 214px;
 }
 .head__block-title {
+  text-align: center;
   margin-bottom: 26px;
 }
 .head__title {
   font-family: "Arial Black", Helvetica, sans-serif;
   margin-bottom: 6px;
 }
+.head__title_position_left {
+  margin-right: 60px;
+}
 .head__title_position_right {
   margin-left: 60px;
 }
 .head__link {
   display: block;
-  width: calc(100% - 16vw);
+  width: 144px;
   margin: 0 auto;
   padding: 10px 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
   border-radius: 20px;
-  background-color: #fff;
-  font-size: 12px;
-  color: #000;
-  text-align: center;
-  -webkit-transition: 0.6s;
-  transition: 0.6s;
-}
-.head__link:hover {
-  background-color: rgba(255, 255, 255, 0.942);
-}
-.head__link:active {
-  background-color: rgba(255, 255, 255, 0.845);
 }
 .head__image {
   margin-top: 50px;
   width: 100%;
   height: auto;
+}
+
+.registration {
+  padding: 34px 0;
+}
+.registration__title {
+  font-size: 20px;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.form {
+  width: 209px;
+  margin: 0 auto;
+}
+.form__fieldset {
+  margin-bottom: 14px;
+}
+.form__label {
+  display: inline-block;
+  margin-bottom: 7px;
+  font-size: 12px;
+}
+.form__item {
+  padding: 9px 11px;
+  width: 100%;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border-radius: 4px;
+}
+.form__item::-webkit-input-placeholder {
+  font-size: 9px;
+  color: #504D4D;
+}
+.form__item:-ms-input-placeholder {
+  font-size: 9px;
+  color: #504D4D;
+}
+.form__item::-ms-input-placeholder {
+  font-size: 9px;
+  color: #504D4D;
+}
+.form__item::placeholder {
+  font-size: 9px;
+  color: #504D4D;
+}
+.form__add-teammate {
+  margin: 18px 0 28px 0;
+  font-size: 12px;
+}
+.form__add-teammate:hover {
+  color: rgba(255, 255, 255, 0.758);
 }
 
 /*# sourceMappingURL=main.css.map */
