--- a/assets/styles/scss/content/_head.scss
+++ b/assets/styles/scss/content/_head.scss
@@ -1,41 +1,33 @@
 .head{
     padding: 50px 0px;
     &__wrapper{
-        width: $wid;
+        // width: calc(100% - 50px);
         margin: 0 auto;
+        width: 214px;
     }
     
     &__block-title{
-        // text-align: center;
+        text-align: center;
         margin-bottom: 26px;
     }
     &__title{
         font-family: "Arial Black", Helvetica, sans-serif;;
         margin-bottom: 6px;
     }
+    &__title_position_left{
+        margin-right: 60px;
+    }
     &__title_position_right{
         margin-left: 60px;
     }
     &__link{
         display: block;
-        width: calc(100% - 16vw);
+        // max-width: calc(50% + 13vw);
+        width: 144px;
         margin: 0 auto;
         padding: 10px 0;
-        box-sizing: border-box;
+      
         border-radius: 20px;
-
-        background-color: $wt;
-        font-size: 12px;
-        color: $bc;
-        text-align: center;
-        transition: 0.6s;
-       
-        &:hover{
-            background-color: rgba(255, 255, 255, 0.942);
-        }
-        &:active{
-            background-color: rgba(255, 255, 255, 0.845);
-        }
     }
 
     &__image{
