--- a/assets/styles/scss/helpers/_reset.scss
+++ b/assets/styles/scss/helpers/_reset.scss
@@ -1,6 +1,6 @@
-// :root{
-//     font-size: calc(1vw + .6em);
-// }
+:root{
+    font-size: calc(1vw + .6em);
+}
 @mixin reset_spaces {
     padding: 0;
     margin: 0; 
@@ -65,10 +65,12 @@ fieldset{
 .container{
     // width: calc(100% - 60px);
     // margin: 0 auto;
-    // width: 100%;
-    // box-sizing: border-box;
+    width: 100%;
+    box-sizing: border-box;
     padding: 0 30px;
 }
+
+
 
 
 
