--- a/assets/styles/scss/content/_head.scss
+++ b/assets/styles/scss/content/_head.scss
@@ -36,3 +36,25 @@
         height: auto;
     }
 }
+
+@media (min-width: 576px) {
+    .head{
+        &__title{
+            font-size: 42px;
+        }
+        &__title_position_left{
+            margin-right: 120px;
+        }
+        &__title_position_right{
+            margin-left: 120px;
+        }
+        &__link{
+            width: 316px;
+            padding: 18px 0;
+            border-radius: 50px;
+            font-size: 20px;
+        }
+    
+
+    } 
+}
