--- a/assets/styles/scss/helpers/_reset.scss
+++ b/assets/styles/scss/helpers/_reset.scss
@@ -71,6 +71,20 @@ fieldset{
 }
 
 
+@media (min-width: 992px) {
+    .container{
+        padding: 0 60px ;
+    };
+}
+
+@media (min-width: 1200px) {
+    .container{
+        padding: 0;
+        width: 1140px;
+        margin: 0 auto;
+    }
+    
+}
 
 
 
