--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -581,6 +581,9 @@ fieldset {
   }
 }
 @media (min-width: 1200px) {
+  .head {
+    padding: 80px 0;
+  }
   .head__wrapper {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -662,6 +665,9 @@ fieldset {
 }
 .form__add-teammate:active {
   color: rgba(255, 255, 255, 0.758);
+}
+.form__show-teammate {
+  display: none;
 }
 
 @media (min-width: 576px) {
@@ -767,6 +773,70 @@ fieldset {
   .form__add-teammate {
     margin: 24px 0 32px 0;
     font-size: 24px;
+  }
+}
+@media (min-width: 1200px) {
+  .registration__title {
+    font-size: 36px;
+    margin-bottom: 30px;
+  }
+
+  .form {
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .form__fieldset {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    margin: 0 50px 25px 50px;
+  }
+  .form__label {
+    font-size: 16px;
+    margin-bottom: 10px;
+  }
+  .form__item {
+    padding: 12px 16px;
+    font-size: 16px;
+    width: 280px;
+  }
+  .form__item::-webkit-input-placeholder {
+    font-size: 14px;
+    color: #504D4D;
+  }
+  .form__item:-ms-input-placeholder {
+    font-size: 14px;
+    color: #504D4D;
+  }
+  .form__item::-ms-input-placeholder {
+    font-size: 14px;
+    color: #504D4D;
+  }
+  .form__item::placeholder {
+    font-size: 14px;
+    color: #504D4D;
+  }
+  .form__add-teammate {
+    display: none;
+  }
+  .form__show-teammate {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .form__submit {
+    margin: 0 auto;
   }
 }
 
