--- a/assets/styles/scss/content/_form.scss
+++ b/assets/styles/scss/content/_form.scss
@@ -40,6 +40,9 @@
             color: rgba(255, 255, 255, 0.758);
         }
     }
+    &__show-teammate{
+        display: none;
+    }
 
 }
 
@@ -135,6 +138,54 @@
         &__add-teammate{
             margin: 24px 0 32px 0;
             font-size: 24px;
+        }
+    }
+
+}
+
+@media (min-width: 1200px) {
+    .registration{
+        &__title{
+            font-size: 36px;
+            margin-bottom: 30px;
+        }
+
+    }
+
+    .form{
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+
+        &__fieldset{
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            margin: 0 50px 25px 50px;
+        }
+        &__label{
+            font-size: 16px;
+            margin-bottom: 10px;
+        }
+        &__item{
+            padding: 12px 16px;
+            font-size: 16px;
+            width: 280px;
+       
+            &::placeholder{
+                font-size: 14px;
+                color:#504D4D;
+            }
+        }
+        &__add-teammate{
+            display: none;
+        }
+        &__show-teammate{
+            display: flex;
+        }
+        &__submit{
+            
+            margin: 0 auto;
         }
     }
 
