--- a/assets/styles/scss/content/_head.scss
+++ b/assets/styles/scss/content/_head.scss
@@ -110,6 +110,7 @@
 
 @media (min-width: 1200px) {
     .head{
+        padding: 80px 0;
         &__wrapper{
             display: flex;
             justify-content: space-between;
