--- a/assets/styles/scss/helpers/_reset.scss
+++ b/assets/styles/scss/helpers/_reset.scss
@@ -81,10 +81,15 @@ fieldset{
     .container{
         padding: 0;
         width: 1140px;
+        
         margin: 0 auto;
     }
     
 }
 
-
+@media (min-width: 1400px){
+    .container{
+        width: 1320px;
+    }
+}
 
