--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -283,6 +283,10 @@ body {
   background-color: #000;
   color: #fff;
   font-family: "Montserrat", Arial, Helvetica, sans-serif;
+  background-image: url("../images/techFestback.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 ul, li {
@@ -365,11 +369,11 @@ fieldset {
   display: none;
 }
 .header__logo_size {
-  width: 106px;
-  height: 23px;
+  width: 120px;
+  height: 34px;
 }
 .header__burger-button {
-  margin-top: 2px;
+  margin-top: -7px;
   font-size: 20px;
   font-weight: bold;
   -webkit-transform: rotate(90deg);
@@ -423,8 +427,8 @@ fieldset {
     padding: 18px 0;
   }
   .header__logo_size {
-    width: 130px;
-    height: 25px;
+    width: 140px;
+    height: 40px;
   }
   .header__burger-button {
     font-size: 22px;
@@ -439,10 +443,11 @@ fieldset {
 }
 @media (min-width: 768px) {
   .header__logo_size {
-    width: 145px;
-    height: 30px;
+    width: 180px;
+    height: 50px;
   }
   .header__burger-button {
+    margin-top: -14px;
     font-size: 24px;
   }
   .header__close-button {
@@ -452,10 +457,6 @@ fieldset {
 @media (min-width: 992px) {
   .header {
     padding: 24px 0;
-  }
-  .header__logo_size {
-    width: 165px;
-    height: 35px;
   }
   .header__burger-button {
     font-size: 28px;
@@ -480,8 +481,8 @@ fieldset {
     display: flex;
   }
   .header__logo_size {
-    width: 170px;
-    height: 32px;
+    width: 250px;
+    height: 60px;
   }
   .header__list {
     display: -webkit-box;
@@ -622,7 +623,7 @@ fieldset {
 }
 @media (min-width: 1400px) {
   .head {
-    padding: 60px 0;
+    padding: 50px 0;
   }
   .head__block-title {
     margin-bottom: 64px;
