--- a/assets/styles/scss/helpers/_reset.scss
+++ b/assets/styles/scss/helpers/_reset.scss
@@ -30,6 +30,10 @@ body{
     background-color: $bc;
     color: $wt;
     font-family: $mnsrt, Arial, Helvetica, sans-serif;
+    background-image: url('../images/techFestback.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 ul,li{
     list-style-type: none;
