--- a/assets/styles/scss/helpers/errors/_er-404.scss
+++ b/assets/styles/scss/helpers/errors/_er-404.scss
@@ -1,6 +1,6 @@
 .error{
     text-align: center;
-    padding: 120px 0;
+    padding-top: 120px;
     &__title{
         font-size: 64px;
     }
@@ -27,8 +27,8 @@
 
 @media (min-width: 768px) {
     .error{
-        text-align: center;
-        padding: 160px 0;
+        
+        padding-top: 180px;
         &__title{
             font-size: 110px;
         }
@@ -43,8 +43,7 @@
 
 @media (min-width: 992px) {
     .error{
-        text-align: center;
-        padding: 120px 0;
+        
         &__title{
             font-size: 150px;
         }
