--- a/assets/styles/scss/content/_header.scss
+++ b/assets/styles/scss/content/_header.scss
@@ -53,7 +53,7 @@
     }
     &__links{
         display: block;
-        // font-size: 20px;
+        font-size: 20px;
         letter-spacing: 2px;
         margin-bottom: 26px;
         font-family: $msref;
@@ -87,11 +87,11 @@
             font-size: 50px;
         }
 
-        &__links{
-            font-size: 20px; 
-            // margin-bottom: 36px;
-            // letter-spacing: 4px;
-        }
+        // &__links{
+        //     font-size: 20px; 
+        //     // margin-bottom: 36px;
+        //     // letter-spacing: 4px;
+        // }
         
     }
 
@@ -111,7 +111,7 @@
             font-size: 24px;
         }
         &__close-button{
-            font-size: 42px;
+            font-size: 55px;
         }   
         &__links{
             font-size: 25px; 
